Implementação de geração de token

--- a/src/FinanceFlow.Api/appsettings.Development.json
+++ b/src/FinanceFlow.Api/appsettings.Development.json
@@ -1,5 +1,11 @@
 {
   "ConnectionStrings": {
     "connection": "Server=localhost;Database=finance_flow_db;Uid=root;Pwd=@Admin123;"
+  },
+  "Settings": {
+    "Jwt": {
+      "SigningKey": "XD}_]1v?**/55/hE5G81SF!5Py<z8vQc",
+      "ExpirationMinutes": 1000
+    }
   }
 }
