--- a/tests/commonTestUtilities/commonTestUtilities.csproj
+++ b/tests/commonTestUtilities/commonTestUtilities.csproj
@@ -7,10 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Bogus" Version="35.6.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\FinanceFlow.Application\FinanceFlow.Application.csproj" />
     <ProjectReference Include="..\..\src\FinanceFlow.Communication\FinanceFlow.Communication.csproj" />
   </ItemGroup>
 
