--- a/src/FinanceFlow.Api/FinanceFlow.Api.csproj
+++ b/src/FinanceFlow.Api/FinanceFlow.Api.csproj
@@ -19,4 +19,11 @@
     <ProjectReference Include="..\FinanceFlow.Exception\FinanceFlow.Exception.csproj" />
     <ProjectReference Include="..\FinanceFlow.Infrastructure\FinanceFlow.Infrastructure.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Update="appsettings.Test.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
