--- a/src/FinanceFlow.Api/appsettings.Development.json
+++ b/src/FinanceFlow.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "connection": "Server=localhost;Database=finance_flow_db;Uid=root;Pwd=@Admin123;"
+    "connection": "Server=localhost;Database=FinanceFlowDb;Uid=root;Pwd=@Admin123;"
   },
   "Settings": {
     "Jwt": {
