feat: Adicionado toda para registrar uma nova conta

--- a/src/FinanceFlow.Api/FinanceFlow.Api.csproj
+++ b/src/FinanceFlow.Api/FinanceFlow.Api.csproj
@@ -5,6 +5,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Controllers\ExpensesController.cs" />
+    <Compile Remove="Controllers\ReportController.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
       <PrivateAssets>all</PrivateAssets>
