--- a/src/FinanceFlow.Infrastructure/FinanceFlow.Infrastructure.csproj
+++ b/src/FinanceFlow.Infrastructure/FinanceFlow.Infrastructure.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DataAccess\Repositories\Expenses\**" />
+    <EmbeddedResource Remove="DataAccess\Repositories\Expenses\**" />
+    <None Remove="DataAccess\Repositories\Expenses\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
