feat: implementado serviço de envio de email

--- a/src/FinanceFlow.Api/appsettings.Development.json
+++ b/src/FinanceFlow.Api/appsettings.Development.json
@@ -6,6 +6,13 @@
     "Jwt": {
       "SigningKey": "XD}_]1v?**/55/hE5G81SF!5Py<z8vQc",
       "ExpirationMinutes": 1000
+    },
+    "Smtp": {
+      "Host": "sandbox.smtp.mailtrap.io",
+      "Port": 587,
+      "Username": "af8fa85303fffe",
+      "Password": "6f27166be14d1a",
+      "EnableSsl": true
     }
   }
 }
