--- a/tests/UseCase.Test/UseCase.Test.csproj
+++ b/tests/UseCase.Test/UseCase.Test.csproj
@@ -10,6 +10,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Expenses\**" />
+    <EmbeddedResource Remove="Expenses\**" />
+    <None Remove="Expenses\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="FluentAssertions" Version="6.12.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
