--- a/tests/WebApi.Test/WebApi.Test.csproj
+++ b/tests/WebApi.Test/WebApi.Test.csproj
@@ -10,6 +10,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Expenses\**" />
+    <EmbeddedResource Remove="Expenses\**" />
+    <None Remove="Expenses\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
